[package]
name = "restic-rest-server"
version = "0.1.0"
authors = ["Michael Zimmermann <sigmaepsilon92@gmail.com>"]
edition = "2018"

[dependencies]
actix-files = "0.4"
actix-web = { version = "3", features = ["openssl"] }
clap = "2.33"
env_logger = "0.8"
futures = "*"
futures-util = "*"
log = "*"
openssl = "0.10"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "*", features = ["fs", "io-util"] }

[profile.release]
lto = true
codegen-units = 1
