[package]
name = "restic-rest-server"
description = "rust version of restics rest-server"
version = "0.1.0"
authors = ["Michael Zimmermann <sigmaepsilon92@gmail.com>"]
edition = "2018"
repository = "https://github.com/M1cha/restic-rest-server-rs"
license = "MIT"

[dependencies]
actix-files = "0.4"
actix-web = { version = "3", features = ["openssl"] }
clap = "2.33"
env_logger = "0.8"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
openssl = "0.10"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["fs", "io-util"] }

[profile.release]
lto = true
codegen-units = 1
